WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
40855
[GTK] Text input controls do not react properly to CSS styling
https://bugs.webkit.org/show_bug.cgi?id=40855
Summary
[GTK] Text input controls do not react properly to CSS styling
Martin Robinson
Reported
2010-06-18 13:37:03 PDT
In particular, this can be observed by comparing the rendering of fast/forms/basic-selects.html and fast/forms/basic-textareas-quirks.html with the pixel dump from the Mac port.
Attachments
Patch for this issue
(766.83 KB, patch)
2010-10-26 16:18 PDT
,
Martin Robinson
no flags
Details
Formatted Diff
Diff
Patch without changes to text area scrollbars as well
(248.54 KB, patch)
2010-11-24 14:40 PST
,
Martin Robinson
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Martin Robinson
Comment 1
2010-10-26 16:02:23 PDT
This should be working for select controls now, but is still an issue for input type=text.
Martin Robinson
Comment 2
2010-10-26 16:18:20 PDT
Created
attachment 71959
[details]
Patch for this issue
Martin Robinson
Comment 3
2010-11-24 14:40:20 PST
Created
attachment 74795
[details]
Patch without changes to text area scrollbars as well
Martin Robinson
Comment 4
2010-11-24 14:42:53 PST
I think Xan preferred that I remove the change to the scrollbar rendering. I'll open a new bug for that. The new patch also doesn't have updated pixel results, but I'll generate them before landing the patch.
Xan Lopez
Comment 5
2010-11-27 08:16:04 PST
Comment on
attachment 74795
[details]
Patch without changes to text area scrollbars as well r=me
Martin Robinson
Comment 6
2010-12-02 06:12:03 PST
Committed
r73128
: <
http://trac.webkit.org/changeset/73128
>
Martin Robinson
Comment 7
2011-01-26 18:23:00 PST
Committed
r76748
: <
http://trac.webkit.org/changeset/76748
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug