2010-11-24  Martin Robinson  <mrobinson@igalia.com>

Reviewed by Xan Lopez.

        [GTK] Text input controls do not react properly to CSS styling
        https://bugs.webkit.org/show_bug.cgi?id=40855

        Update tests which have changed after fixes to text field layout.

        * platform/gtk/fast/css/input-search-padding-expected.txt:
        * platform/gtk/fast/css/text-input-with-webkit-border-radius-expected.txt:
        * platform/gtk/fast/forms/basic-inputs-expected.txt:
        * platform/gtk/fast/forms/basic-textareas-expected.txt:
        * platform/gtk/fast/forms/box-shadow-override-expected.txt:
        * platform/gtk/fast/forms/control-restrict-line-height-expected.txt:
        * platform/gtk/fast/forms/encoding-test-expected.txt:
        * platform/gtk/fast/forms/fieldset-align-expected.txt:
        * platform/gtk/fast/forms/floating-textfield-relayout-expected.txt:
        * platform/gtk/fast/forms/form-element-geometry-expected.txt:
        * platform/gtk/fast/forms/input-align-expected.txt:
        * platform/gtk/fast/forms/input-appearance-default-bkcolor-expected.txt:
        * platform/gtk/fast/forms/input-appearance-disabled-expected.txt:
        * platform/gtk/fast/forms/input-appearance-focus-expected.txt:
        * platform/gtk/fast/forms/input-appearance-height-expected.txt:
        * platform/gtk/fast/forms/input-appearance-preventDefault-expected.txt:
        * platform/gtk/fast/forms/input-appearance-readonly-expected.txt:
        * platform/gtk/fast/forms/input-appearance-selection-expected.txt:
        * platform/gtk/fast/forms/input-appearance-visibility-expected.txt:
        * platform/gtk/fast/forms/input-appearance-width-expected.txt:
        * platform/gtk/fast/forms/input-baseline-expected.txt:
        * platform/gtk/fast/forms/input-disabled-color-expected.txt:
        * platform/gtk/fast/forms/input-double-click-selection-gap-bug-expected.txt:
        * platform/gtk/fast/forms/input-field-text-truncated-expected.txt:
        * platform/gtk/fast/forms/input-paste-undo-expected.txt:
        * platform/gtk/fast/forms/input-placeholder-focus-twice-expected.txt:
        * platform/gtk/fast/forms/input-readonly-autoscroll-expected.txt:
        * platform/gtk/fast/forms/input-readonly-dimmed-expected.txt:
        * platform/gtk/fast/forms/input-readonly-empty-expected.txt:
        * platform/gtk/fast/forms/input-spaces-expected.txt:
        * platform/gtk/fast/forms/input-table-expected.txt:
        * platform/gtk/fast/forms/input-text-click-inside-expected.txt:
        * platform/gtk/fast/forms/input-text-click-outside-expected.txt:
        * platform/gtk/fast/forms/input-text-double-click-expected.txt:
        * platform/gtk/fast/forms/input-text-drag-down-expected.txt:
        * platform/gtk/fast/forms/input-text-option-delete-expected.txt:
        * platform/gtk/fast/forms/input-text-scroll-left-on-blur-expected.txt:
        * platform/gtk/fast/forms/input-text-self-emptying-click-expected.txt:
        * platform/gtk/fast/forms/input-text-word-wrap-expected.txt:
        * platform/gtk/fast/forms/input-type-change2-expected.txt:
        * platform/gtk/fast/forms/input-type-text-min-width-expected.txt:
        * platform/gtk/fast/forms/input-value-expected.txt:
        * platform/gtk/fast/forms/input-width-expected.txt:
        * platform/gtk/fast/forms/isindex-placeholder-expected.txt:
        * platform/gtk/fast/forms/minWidthPercent-expected.txt:
        * platform/gtk/fast/forms/password-placeholder-expected.txt:
        * platform/gtk/fast/forms/password-placeholder-text-security-expected.txt:
        * platform/gtk/fast/forms/placeholder-pseudo-style-expected.txt:
        * platform/gtk/fast/forms/placeholder-set-attribute-expected.txt:
        * platform/gtk/fast/forms/placeholder-set-value-expected.txt:
        * platform/gtk/fast/forms/placeholder-stripped-expected.txt:
        * platform/gtk/fast/forms/plaintext-mode-2-expected.txt:
        * platform/gtk/fast/forms/search-cancel-button-style-sharing-expected.txt:
        * platform/gtk/fast/forms/search-display-none-cancel-button-expected.txt:
        * platform/gtk/fast/forms/search-placeholder-value-changed-expected.txt:
        * platform/gtk/fast/forms/search-rtl-expected.txt:
        * platform/gtk/fast/forms/search-styled-expected.txt:
        * platform/gtk/fast/forms/search-transformed-expected.txt:
        * platform/gtk/fast/forms/search-zoomed-expected.txt:
        * platform/gtk/fast/forms/searchfield-heights-expected.txt:
        * platform/gtk/fast/forms/tabbing-input-iframe-expected.txt:
        * platform/gtk/fast/forms/text-control-intrinsic-widths-expected.txt:
        * platform/gtk/fast/forms/text-style-color-expected.txt:
        * platform/gtk/fast/forms/textAreaLineHeight-expected.txt:
        * platform/gtk/fast/forms/textarea-align-expected.txt:
        * platform/gtk/fast/forms/textarea-placeholder-pseudo-style-expected.txt:
        * platform/gtk/fast/forms/textarea-placeholder-set-attribute-expected.txt:
        * platform/gtk/fast/forms/textarea-placeholder-set-value-expected.txt:
        * platform/gtk/fast/forms/textarea-scroll-height-expected.txt:
        * platform/gtk/fast/forms/textarea-scrollbar-expected.txt:
        * platform/gtk/fast/forms/textarea-scrolled-type-expected.txt:
        * platform/gtk/fast/forms/textarea-setinnerhtml-expected.txt:
        * platform/gtk/fast/forms/textarea-width-expected.txt:
        * platform/gtk/fast/forms/textfield-focus-ring-expected.txt:
        * platform/gtk/fast/forms/textfield-overflow-expected.txt:
        * platform/gtk/fast/forms/visual-hebrew-text-field-expected.txt:
        * platform/gtk/fast/frames/take-focus-from-iframe-expected.txt:
2010-10-26  Martin Robinson  <mrobinson@igalia.com>

        Reviewed by Xan Lopez.

        [GTK] Text input controls do not react properly to CSS styling
        https://bugs.webkit.org/show_bug.cgi?id=40855

        Improve text input control rendering. Instead of using the GTK+ border
        attributes of the control modify the padding, they modify the border.
        Make this same choice for search inputs and text area inputs.

        * platform/gtk/RenderThemeGtk.cpp:
        (WebCore::setTextInputBorders): Added this helper which sets text input control
        borders based on GTK+ theme settings.
        (WebCore::RenderThemeGtk::adjustTextFieldStyle): Use the setTextInputBorders helper.
        (WebCore::RenderThemeGtk::adjustTextAreaStyle): Ditto.
        (WebCore::RenderThemeGtk::adjustSearchFieldStyle): Ditto.
        * platform/gtk/RenderThemeGtk.h:

Canonical link: https://commits.webkit.org/63573@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@73128 268f45cc-cd09-0410-ab3c-d52691b4dbfc