WebCore/platform/gtk/RenderThemeGtk.h
@@ -100,6 +100,7 @@ protected:
     virtual void adjustTextFieldStyle(CSSStyleSelector*, RenderStyle*, Element*) const;
     virtual bool paintTextField(RenderObject*, const PaintInfo&, const IntRect&);
 
+    void adjustTextAreaStyle(CSSStyleSelector*, RenderStyle*, Element*) const;
     virtual bool paintTextArea(RenderObject*, const PaintInfo&, const IntRect&);
 
     int popupInternalPaddingLeft(RenderStyle*) const;
